add searchbar, changed some stuff

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -2,6 +2,6 @@ $main-color: #ffc90d;
 
 $page-margin-h: 100px;
 
-$header-back-color: black;
-$header-back-color-hover: black;
 $header-height: 50px;
+
+$wrap-back-color: #F5F5F5;
