--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -4,4 +4,7 @@ $page-margin-h: 100px;
 
 $header-height: 50px;
 
+$searchbar-box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25);
+
 $wrap-back-color: #F5F5F5;
+$wrap-box-shadow: 2px 5px 4px rgba(0,0,0, 0.25);
