--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,4 +1,21 @@
-$main-color: #ffc90d;
+$primary-color: #ffc90d;
+$secondary-color: #65e800;
+$tertiary-color: #f60e24;
+
+$primary-color-light: #ffe27a;
+$primary-color-dark: #a68205;
+
+$secondary-color-light: #aaf174;
+$secondary-color-dark: #429304;
+
+$tertiary-color-light: #fb7885;
+$tertiary-color-dark: #a00413;
+
+$default-border-radius: 100px;
+
+$gray: #7F7F7F;
+$white: #FFFFFF;
+$black: #000000;
 
 $page-margin-h: 100px;
 
@@ -6,6 +23,6 @@ $header-height: 50px;
 
 $searchbar-box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25);
 
-$wrap-back-color: #F5F5F5;
-$wrap-box-shadow: 2px 5px 4px rgba(0,0,0, 0.25);
+$wrap-back-color: #f5f5f5;
+$wrap-box-shadow: 2px 5px 4px rgba(0, 0, 0, 0.25);
 $wrap-border-radius: 100px;
