--- a/src/assets/indents.scss
+++ b/src/assets/indents.scss
@@ -1,25 +1,25 @@
 @mixin indentGenerator($infix:null) {
     @each $prop, $abbrev in (margin: m, padding: p) {
-        @for $spacer from 0 to 200 {
+        @for $spacer from 0 to 100 {
             @if $spacer%5 == 0 {
                 .#{$abbrev}-a#{$infix}-#{$spacer} {
-                    #{$prop}: rem-calc($spacer);
+                    #{$prop}: ($spacer+px);
                 }
                 .#{$abbrev}-t#{$infix}-#{$spacer},
                 .#{$abbrev}-y#{$infix}-#{$spacer} {
-                    #{$prop}-top: rem-calc($spacer);
+                    #{$prop}-top: ($spacer+px);
                 }
                 .#{$abbrev}-r#{$infix}-#{$spacer},
                 .#{$abbrev}-x#{$infix}-#{$spacer} {
-                    #{$prop}-right: rem-calc($spacer);
+                    #{$prop}-right: ($spacer+px);
                 }
                 .#{$abbrev}-b#{$infix}-#{$spacer},
                 .#{$abbrev}-y#{$infix}-#{$spacer} {
-                    #{$prop}-bottom: rem-calc($spacer);
+                    #{$prop}-bottom: ($spacer+px);
                 }
                 .#{$abbrev}-l#{$infix}-#{$spacer},
                 .#{$abbrev}-x#{$infix}-#{$spacer} {
-                    #{$prop}-left: rem-calc($spacer);
+                    #{$prop}-left: ($spacer+px);
                 }
             }
         }
