Обновил ассетсы, добавил генераторов и хелперов

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -11,10 +11,10 @@ $secondary-color-dark: #429304;
 $tertiary-color-light: #fb7885;
 $tertiary-color-dark: #a00413;
 
-$default-border-radius: 100px;
+$default-border-radius: 100%;
 
-$gray: #7F7F7F;
-$white: #FFFFFF;
+$gray: #7f7f7f;
+$white: #ffffff;
 $black: #000000;
 
 $page-margin-h: 100px;
